# lucrezia_ai_news

./: pyproject.toml
lucrezia_ai_news/: run.py
